# linc

./: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  libtool
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
conf/: linc.conf
src/: Makefile  Makefile.am  Makefile.in  linc  main.c
src/.deps/: main.Po
src/.libs/: linc
src/core/: Makefile  Makefile.am  Makefile.in  libcore.la  threadpool.c  threadpool.h  wyl_config.h  wyl_configure.c  wyl_configure.h  wyl_configure.lo  wyl_core.c  wyl_core.h  wyl_log.c  wyl_log.h  wyl_socket.c  wyl_socket.h  wyl_socket.lo  wyl_uart.c  wyl_uart.h  wyl_uart.lo
src/core/.deps/: threadpool.Plo  wyl_configure.Plo  wyl_core.Plo  wyl_log.Plo  wyl_socket.Plo  wyl_uart.Plo
src/core/.libs/: libcore.lai  libcore.so.0.0.0
src/os/unix/: Makefile  Makefile.am  Makefile.in  libosunix.la  wyl_daemon.c  wyl_daemon.h  wyl_daemon.lo  wyl_linux_config.h
src/os/unix/.deps/: wyl_daemon.Plo
src/os/unix/.libs/: libos.la  libos.lai  libos.so.0  libosunix.lai
